Add ScheduledWorkouts structure and update BaseUsecase
- Add ScheduledWorkouts DTOs, and usecase
- Add date format validation for scheduled_time field
- Add status validation with allowed values
- Change Status field type in ScheduledWorkouts model
- Update BaseUsecase with improved with func for ownership recognition
- Add GORM hooks for all workout entities
